# pixsense

./: .dockerignore  .gitignore  .gitmodules  049222073570.sh  819112071917.sh  948122070900.sh  CMakeLists.txt  Dockerfile  config.txt  face_finder.cpp  person.py  poser.py  rs_cams.py  run.sh  tracking.cpp  tracking.py
include/pixsense/: eye_tracker.hpp  face_finder.hpp  mob.hpp  person.hpp  tracked_face.hpp  tracking_service.hpp
models/: .gitignore
pixrpc/: CMakeLists.txt  pixrpc.cpp
pixrpc/include/pixrpc/: pixrpc.hpp
src/: client.cpp  eye_tracker.cpp  face_finder.cpp  mob.cpp  person.cpp  tracked_face.cpp  tracking.cpp  tracking_service.cpp
test/: test_person.py  test_tracking.py
tests/: mob_tests.cpp  person_tests.cpp
